--- a/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
@@ -1,11 +1,10 @@
 ﻿@model string
 
-<div class="no-bottom no-top bg-black text-light" id="china-migration" style="background-size: cover; background-repeat: no-repeat;">
-    <div id="top" style="background-size: cover; background-repeat: no-repeat;" class="text-center pb-5  pt-5">
+
+<div class="bg-black text-light mt-5 pt-5" id="china-migration">
+    <div class="text-center pb-5  pt-5">
         <h1>Migration Stories</h1>
     </div>
-    <div>
-        <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
             <div class="container" style="background-size: cover; background-repeat: no-repeat;">
                 <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
@@ -42,8 +41,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
 
 
 </div>
