--- a/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
@@ -1,52 +1,50 @@
 ﻿@model string
 
 
-
-<div class="no-bottom no-top bg-black text-light" id="philipines-migration" style="background-size: cover; background-repeat: no-repeat;">
-
-    <div id="top" style="background-size: cover; background-repeat: no-repeat;" class="text-center pb-5  pt-5">
-        <h1>Migration Stories</h1>
-    </div>
-    @*story part*@
-    <div>
-        <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
-            <div class="container" style="background-size: cover; background-repeat: no-repeat;">
-                <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
-                    <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+    <div class="bg-black text-light mt-5 pt-5" id="philipines-migration">
+        <div class="text-center pb-5  pt-5">
+            <h1>Migration Stories</h1>
+        </div>
+        @*story part*@
+        <div>
+            <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
+                <div class="container" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+                                        </div>
+                                        <img alt="" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" class="lazy">
                                     </div>
-                                    <img alt="" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" class="lazy">
-                                </div>
-                                <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                    <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a></h4>
-                                    <p class="text-light">Discover Francisco's inspiring journey to Melbourne, where multiculturalism, opportunity, and a balanced lifestyle weave the story of a family's pursuit of happiness and contribution to a vibrant community...</p>
+                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                        <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a></h4>
+                                        <p class="text-light">Discover Francisco's inspiring journey to Melbourne, where multiculturalism, opportunity, and a balanced lifestyle weave the story of a family's pursuit of happiness and contribution to a vibrant community...</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
-                        <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
-                            <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
-                                <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                                    <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                        <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+                                        </div>
+                                        <img alt="" src="@Url.Content("~/Content/Customer/images/mig/p2.webp")" class="lazy">
                                     </div>
-                                    <img alt="" src="@Url.Content("~/Content/Customer/images/mig/p2.webp")" class="lazy">
-                                </div>
-                                <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
-                                    <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
-                                    <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">How a Filipino lime is driving inclusion in Australia</a></h4>
-                                    <p class="text-light">Driven by their personal journey of cultural discovery, Fides Mae Santos and Grace Guinto transform challenges into a mission with The Entree.Pinays, celebrating Filipino heritage and promoting cultural unity in Australia through The Calamansi Story.</p>
+                                    <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                        <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                        <h4><a class="text-light" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">How a Filipino lime is driving inclusion in Australia</a></h4>
+                                        <p class="text-light">Driven by their personal journey of cultural discovery, Fides Mae Santos and Grace Guinto transform challenges into a mission with The Entree.Pinays, celebrating Filipino heritage and promoting cultural unity in Australia through The Calamansi Story.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
+            </section>
+        </div>
 
-</div>
+    </div>
