--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -79,10 +79,10 @@
                 <div class="row mb-3">
                     <h1  style="word-spacing: 8px;" >Common Phrases and Cultural Etiquette Quiz</h1>
                 </div>
-                <div class="row justify-content-center ">
-                    <h4 id="startMessage" >"Want to learn about this culture in depth? Try this quiz!"</h4>
+                <div class="row justify-content-center pb-5 pt-5 ">
+                    <h4 id="startMessage" class="pb-5" >"Want to learn about this culture in depth? Try this quiz!"</h4>
 
-                    <button id="loadQuiz" class="btn btn-primary text-white culture-btn w-25">Learn About @ViewBag.Culture  </button>
+                    <button id="loadQuiz" class="btn btn-primary text-white culture-btn  w-25">Learn About @ViewBag.Culture  </button>
                 </div>
                 <div id="quizFrame" class="text-white" style="display:none;"></div> <!-- Placeholder for the iFrame if needed -->
             </div>
