--- a/TP03MainProj/Content/Mycss/style.css
+++ b/TP03MainProj/Content/Mycss/style.css
@@ -1,12 +1,13 @@
 ﻿.btn {
     width: 150px;
-    height:45px;
+    height: 45px;
     display: inline-block;
     text-align: center;
-    padding: 2%;
     border: 1px solid transparent;
     border-radius: 4px;
     transition: background-color 0.3s, border-color 0.3s;
+    font-size: 0.875rem;
+    padding: 0.5rem 1rem;
 }
 
 @media (max-width: 768px) {
@@ -15,4 +16,8 @@
     }
 }
 
+h1 {
+    font-size: 1.75rem; /* Large screens */
+    line-height: 1.2;
+}
 
