--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -45,15 +45,20 @@
         <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
             <div class="col "></div>
             <div class="col text-center">
-                <a class="btn culture-btn btn-primary text-nowrap w-25" href="">Events</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="">Quiz</a>
+                <a class="btn culture-btn btn-primary text-nowrap w-25" href="@Url.Action("Index", "Events")#events-nav">Events</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="@Url.Action("Index", "Events")#quiz-nav">Quiz</a>
                 <a class="btn culture-btn btn-primary fs-6 w-25" href="">Attraction</a>
             </div>
             <div class="col"></div>
         </div>
 
+        <div id="events-nav">
+            <br />
+            <br />
+            <br />
+        </div>
 
-        <div class="row justify-content-center section-row mt-5">
+        <div class="row justify-content-center section-row mt-5" id="events">
             <div class="col-4">
 
                 <div id="calendar" class="mx-auto"></div>
@@ -73,21 +78,25 @@
 
         </div>
         <!-- quiz-->
+        <div id="quiz-nav">
+            <br />
+            <br />
+        </div>
         <!-- Please add and adjust the CSS according to page (but please keep the messages same as the ones below)-->
         <div class="row justify-content-center section-row bg-warning pt-5 mt-5" id="quiz-section">
             <div class="col-lg-8 col-md-10 text-center">
                 <div class="row mb-3">
-                    <h1  style="word-spacing: 8px;" >Common Phrases and Cultural Etiquette Quiz</h1>
+                    <h1 style="word-spacing: 8px;">Common Phrases and Cultural Etiquette Quiz</h1>
                 </div>
                 <div class="row justify-content-center pb-5 pt-5 ">
-                    <h4 id="startMessage" class="pb-5" >"Want to learn about this culture in depth? Try this quiz!"</h4>
+                    <h4 id="startMessage" class="pb-5">"Want to learn about this culture in depth? Try this quiz!"</h4>
 
                     <button id="loadQuiz" class="btn btn-primary text-white culture-btn  w-25">Learn About @ViewBag.Culture  </button>
                 </div>
                 <div id="quizFrame" class="text-white" style="display:none;"></div> <!-- Placeholder for the iFrame if needed -->
             </div>
         </div>
-     </div>
+    </div>
 
 </section>
 
